--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  
   <head>
     <title>Learn BM</title>
     <meta charset="UTF-8">
@@ -7,8 +8,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Welcome!</h1>
-    <p>Here is some content for my website.</p>
-    <p>It sucks right now, but it'll get somewhere (hopefully) soon!</p>
+    <iframe src="banner.html" frameborder="0" width="100%" height="100"></iframe>
+    <main>
+      <h1>Welcome!</h1>
+      <p>Here is some content for my website.</p>
+      <p>It sucks right now, but it'll get somewhere (hopefully) soon!</p>
+    </main>
   </body>
+  
 </html>
