--- a/banner.html
+++ b/banner.html
@@ -3,13 +3,13 @@
   
 <head>
 	<meta charset="UTF-8">
-	<title>My Website</title>
+	<title>Learn BM</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
 		<div class="logo">
-			<img src="logo.png" alt="My Logo">
+			<img src="logo.png" alt="Learn BM logo">
 		</div>
 		<nav>
 			<ul>
