--- a/banner.html
+++ b/banner.html
@@ -6,6 +6,7 @@
 	<title>Learn BM</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
 	<header>
 		<div class="logo">
@@ -14,11 +15,36 @@
 		<nav>
 			<ul>
 				<li><a href="#">Home</a></li>
+				<li><a href="#">Modules</a></li>
 				<li><a href="#">About</a></li>
 				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
+	
+	<style>
+		header {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			background-color: #f1f1f1;
+			padding: 10px;}
+		
+		.menu {
+			display: flex;
+			list-style: none;
+			margin: 0;
+			padding: 0;}
+
+		.menu li {
+			margin: 0 10px;}
+
+		.menu li a {
+			text-decoration: none;
+			color: #333;
+			font-size: 16px;}
+	</style>
+
 </body>
 
 </html>
